Mon Aug  9 22:15:19 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_open): Pathname#open
	  translated from pathname.rb.

Mon Aug  9 22:11:09 2010  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_signal.rb (TestSignal#test_exit_action): use
	  Process.spawn instead of Process.fork.

Mon Aug  9 15:59:02 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/rubygems/source_index.rb: rename unused variable.

	* lib/rubygems/specification.rb: rename unused variable.

	* lib/rubygems/specification.rb: remove unused variable.

Mon Aug  9 14:10:06 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: Fix type of mimeout_state.buf.
	  [nkf-bug:20079]

Mon Aug  9 06:52:59 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (sys_warning_1): show error message.

Mon Aug  9 06:50:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_require.rb (test_require_too_long_filename):
	  clear -w option.

Mon Aug  9 00:18:44 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb ($ignore_error): initialize after $nmake.

Sun Aug  8 19:16:26 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_make_link): Pathname#make_link
	  translated from pathname.rb.

Sun Aug  8 16:42:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rubygems.rb (Gem.find_files): reverted to use globbing.

	* lib/rubygems.rb (Gem.find_files): fixed search order same as
	  default behavior.

	* gem_prelude.rb, lib/rubygems.rb (Gem.suffixes): return truely
	  require-able suffixes only.

Sun Aug  8 13:20:57 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_ftype): Pathname#ftype translated
	  from pathname.rb.

Sun Aug  8 12:41:19 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_tokadd_escape): no similar messages twice.
	  [ruby-core:31048]

Sun Aug  8 10:07:45 2010  Tanaka Akira  <akr@fsij.org>

	* strftime.c (rb_strftime_with_timespec): suppress warnings.
