@@ -1,7 +1,12 @@
+Tue Aug 10 06:26:48 2010  Tanaka Akira  <akr@fsij.org>
+
+	* ext/pathname/pathname.c (path_readlink): Pathname#readlink translated
+	  from pathname.rb.
+
 Mon Aug  9 22:15:19 2010  Tanaka Akira  <akr@fsij.org>
 
-	* ext/pathname/pathname.c (path_open): Pathname#open
-	  translated from pathname.rb.
+	* ext/pathname/pathname.c (path_open): Pathname#open translated from
+	  pathname.rb.
 
 Mon Aug  9 22:11:09 2010  Tanaka Akira  <akr@fsij.org>
 
